# lab-09-producer-consumer

./: .travis.yml  CMakeLists.txt  README.md
include/: Consumer.hpp  Globals.hpp  Producer.hpp  Queue.hpp  root_certificates.hpp
sources/: main.cpp
tests/: test.cpp
